--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home_page' %}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'home_page' %}">Show Task</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'add_task' %}">Add Task</a>
